which was an accidental (undocumented) feature.  INCOMPATIBILITY, use
white space directly.

* Theory loader: use_thy (and similar operations) no longer set the
implicit ML context, which was occasionally hard to predict and in
conflict with concurrency.  INCOMPATIBILITY, use ML within Isar which
provides a proper context already.


*** Pure ***

* Instantiation target allows for simultaneous specification of class
instance operations together with an instantiation proof.
Type-checking phase allows to refer to class operations uniformly.
See HOL/Complex/Complex.thy for an Isar example and
HOL/Library/Eval.thy for an ML example.

* Indexing of literal facts: be more serious about including only
facts from the visible specification/proof context, but not the
background context (locale etc.).  Affects `prop` notation and method
"fact".  INCOMPATIBILITY: need to name facts explicitly in rare
situations.


*** HOL ***

* Theory Nat: renamed less_imp_le to less_imp_le_nat; removed
redundant lemmas less_trans, less_linear, le_imp_less_or_eq,
le_less_trans, less_le_trans, which merely duplicate lemmas of the
same name in theory Orderings.  Potential INCOMPATIBILITY due to more
general and different variable names.

* Library/Option_ord.thy: Canonical order on option type.

* Library/RBT.thy: New theory of red-black trees, an efficient
implementation of finite maps.

* Library/Countable.thy: Type class for countable types.

* Theory Int: The representation of numerals has changed.  The infix
operator BIT and the bit datatype with constructors B0 and B1 have
disappeared.  INCOMPATIBILITY, use "Int.Bit0 x" and "Int.Bit1 y" in
place of "x BIT bit.B0" and "y BIT bit.B1", respectively.  Theorems
involving BIT, B0, or B1 have been renamed with "Bit0" or "Bit1"
accordingly.

* Theory Nat: definition of <= and < on natural numbers no longer
depend on well-founded relations.  INCOMPATIBILITY.  Definitions
le_def and less_def have disappeared.  Consider lemmas not_less